adding the test cases